@@ -106,7 +106,7 @@ public class PollingExecutorService implements ExecutorService {
     public <T> @NotNull List<Future<T>> invokeAll(Collection<? extends Callable<T>> tasks) {
         List<CompletableFuture<T>> futures = tasks.stream()
                 .map(this::submit)
-                .collect(Collectors.toList());
+                .toList();
         return futures.stream()
                 .map(CompletableFuture::join)
                 .map(CompletableFuture::completedFuture)
@@ -118,7 +118,7 @@ public class PollingExecutorService implements ExecutorService {
         long endTime = System.currentTimeMillis() + unit.toMillis(timeout);
         List<CompletableFuture<T>> futures = tasks.stream()
                 .map(this::submit)
-                .collect(Collectors.toList());
+                .toList();
         List<Future<T>> resultList = new ArrayList<>();
 
         for (CompletableFuture<T> future : futures) {
@@ -137,7 +137,7 @@ public class PollingExecutorService implements ExecutorService {
     public <T> @NotNull T invokeAny(Collection<? extends Callable<T>> tasks) throws InterruptedException, ExecutionException {
         var futures = tasks.stream()
                 .map(this::submit)
-                .collect(Collectors.toList());
+                .toList();
 
         try {
             return CompletableFuture.anyOf(futures.toArray(new CompletableFuture[0]))
@@ -155,7 +155,7 @@ public class PollingExecutorService implements ExecutorService {
         var endTime = System.currentTimeMillis() + unit.toMillis(timeout);
         var futures = tasks.stream()
                 .map(this::submit)
-                .collect(Collectors.toList());
+                .toList();
 
         try {
             var result = CompletableFuture.anyOf(futures.toArray(new CompletableFuture[0]))
